--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "fs": "0.0.1-security",
+    "material-dashboard": "^2.1.0",
     "moment": "^2.22.2",
     "npm": "^6.1.0",
     "vue": "^2.5.2",
