--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-dashboard": "^2.1.0",
     "moment": "^2.22.2",
     "npm": "^6.1.0",
+    "qiniu-js": "^2.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.7.2",
